--- a/package.json
+++ b/package.json
@@ -5,23 +5,12 @@
   "bin": "index.js",
   "license": "MIT",
   "private": false,
-  "scripts": {
-    "dev": "APP_LISTEN_PORT=8002 PROXY_TARGET_HOST=http://localhost:8000 nodemon -L",
-    "exec": "ts-node src/index.ts"
-  },
+  "scripts": {},
   "dependencies": {
     "commander": "^6.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-http-proxy": "^1.6.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "express-http-proxy": "^1.6.0"
   },
-  "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
-    "@types/express-http-proxy": "^1.5.12",
-    "@types/node": "^13.7.0",
-    "nodemon": "^2.0.2"
-  }
+  "devDependencies": {}
 }
